Criação da tela de login e validação do formulário

--- a/app_vue2/src/assets/css/tailwind.css
+++ b/app_vue2/src/assets/css/tailwind.css
@@ -6,3 +6,12 @@ a {
 
 @tailwind components;
 @tailwind utilities;
+
+.spinner {
+    animation: gira 1s linear infinite; 
+}
+@keyframes gira {
+    to {
+        transform: rotate(360deg);
+    }
+}
